bin = [
  #{name="edpc_e", path="src/edpc/e.rs"},
  #{name="edpc_f", path="src/edpc/f.rs"},
  #{name="edpc_i", path="src/edpc/i.rs"},
  #{name="edpc_j", path="src/edpc/j.rs"},
  #{name="edpc_k", path="src/edpc/k.rs"},
  #{name="edpc_l", path="src/edpc/l.rs"},
  #{name="edpc_m", path="src/edpc/m.rs"},
  #{name="edpc_n", path="src/edpc/n.rs"},
  #{name="edpc_o", path="src/edpc/o.rs"},
  #{name="edpc_p", path="src/edpc/p.rs"},
  #{name="edpc_q", path="src/edpc/q.rs"},
  #{name="edpc_t", path="src/edpc/t.rs"},
  {name="abc182f", path="src/abc182/f.rs"},
  #{name="abc202d", path="src/abc202/d.rs"},
  #{name="abc203e", path="src/abc203/e.rs"},
  #{name="abc204e", path="src/abc204/e.rs"},
  #{name="abc205e", path="src/abc205/e.rs"},
  #{name="abc207e", path="src/abc207/e.rs"},
  #{name="abc207f", path="src/abc207/f.rs"},
  #{name="abc208e", path="src/abc208/e.rs"},
  #{name="abc211e", path="src/abc211/e.rs"},
  #{name="abc214f", path="src/abc214/f.rs"},
  #{name="abc221e", path="src/abc221/e.rs"},
  #{name="abc221f", path="src/abc221/f.rs"},
  #{name="abc221g", path="src/abc221/g.rs"},
  #{name="abc222d", path="src/abc222/d.rs"},
  #{name="abc222e", path="src/abc222/e.rs"},
  #{name="abc222f", path="src/abc222/f.rs"},
  #{name="abc223d", path="src/abc223/d.rs"},
  #{name="abc223e", path="src/abc223/e.rs"},
  #{name="abc223f", path="src/abc223/f.rs"},
  #{name="abc224c", path="src/abc224/c.rs"},
  #{name="abc224d", path="src/abc224/d.rs"},
  #{name="abc224e", path="src/abc224/e.rs"},
  #{name="abc224f", path="src/abc224/f.rs"},
  #{name="abc224g", path="src/abc224/g.rs"},
  #{name="abc225c", path="src/abc225/c.rs"},
  #{name="abc225d", path="src/abc225/d.rs"},
  #{name="abc225e", path="src/abc225/e.rs"},
  #{name="abc225f", path="src/abc225/f.rs"},
  #{name="abc226c", path="src/abc226/c.rs"},
  #{name="abc226d", path="src/abc226/d.rs"},
  #{name="abc226e", path="src/abc226/e.rs"},
  #{name="abc226f", path="src/abc226/f.rs"},
  #{name="abc227c", path="src/abc227/c.rs"},
  #{name="abc227d", path="src/abc227/d.rs"},
  #{name="abc227e", path="src/abc227/e.rs"},
  #{name="abc227f", path="src/abc227/f.rs"},
  #{name="abc228c", path="src/abc228/c.rs"},
  #{name="abc228d", path="src/abc228/d.rs"},
  #{name="abc228e", path="src/abc228/e.rs"},
  #{name="abc228f", path="src/abc228/f.rs"},
  #{name="abc229c", path="src/abc229/c.rs"},
  #{name="abc229d", path="src/abc229/d.rs"},
  #{name="abc229e", path="src/abc229/e.rs"},
  #{name="abc229f", path="src/abc229/f.rs"},
  #{name="abc230f", path="src/abc230/f.rs"},
  #{name="abc231c", path="src/abc231/c.rs"},
  #{name="abc231d", path="src/abc231/d.rs"},
  #{name="abc231e", path="src/abc231/e.rs"},
  #{name="abc231f", path="src/abc231/f.rs"},
  #{name="abc232c", path="src/abc232/c.rs"},
  #{name="abc232d", path="src/abc232/d.rs"},
  #{name="abc232e", path="src/abc232/e.rs"},
  #{name="abc232f", path="src/abc232/f.rs"},
]

[package]
name = "atcoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustrithm = { git = "https://github.com/kena0ki/rustrithm" }
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"
#num-derive = "=0.3.0"
#ndarray = "=0.13.0"
#nalgebra = "=0.20.0"
#alga = "=0.9.3"
#libm = "=0.2.1"
#rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"
#rand_distr = "=0.2.2"
#petgraph = "=0.5.0"
#indexmap = "=1.3.2"
#regex = "=1.3.6"
#lazy_static = "=1.4.0"
#ordered-float = "=1.0.2"
#ascii = "=1.0.0"
#permutohedron = "=0.2.4"
#superslice = "=1.0.0"
#itertools = "=0.9.0"
#itertools-num = "=0.1.3"
#maplit = "=1.0.2"
#either = "=1.5.3"
#im-rc = "=14.3.0"
#fixedbitset = "=0.2.0"
#bitset-fixed = "=0.1.0"
#proconio = { version = "=0.3.6", features = ["derive"] }
#text_io = "=0.1.8"
#whiteread = "=0.5.0"
#rustc-hash = "=1.1.0"
#smallvec = "=1.2.0"

[dev-dependencies]
bitvec = "0.22.3"

[[bench]]
name = "bitarray"
harness = false

