bin = [
  #{name="edpc_e", path="src/edpc/e.rs"},
  #{name="edpc_s", path="src/edpc/s.rs"},
  #{name="abc158e", path="src/abc158/e.rs"},
  #{name="abc208d", path="src/abc208/d.rs"},
  {name="a", path="src/contest/a.rs"},
  {name="b", path="src/contest/b.rs"},
  {name="c", path="src/contest/c.rs"},
  {name="d", path="src/contest/d.rs"},
  {name="e", path="src/contest/e.rs"},
  {name="f", path="src/contest/f.rs"},
  {name="g", path="src/contest/g.rs"},
  {name="h", path="src/contest/h.rs"},
]

[package]
name = "atcoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustrithm = { git = "https://github.com/kena0ki/rustrithm" }
#num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
#num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
#num-traits = "=0.2.11"
#num-derive = "=0.3.0"
#ndarray = "=0.13.0"
#nalgebra = "=0.20.0"
#alga = "=0.9.3"
#libm = "=0.2.1"
#rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"
#rand_distr = "=0.2.2"
#petgraph = "=0.5.0"
#indexmap = "=1.3.2"
#regex = "=1.3.6"
#lazy_static = "=1.4.0"
#ordered-float = "=1.0.2"
#ascii = "=1.0.0"
#permutohedron = "=0.2.4"
#superslice = "=1.0.0"
#itertools = "=0.9.0"
#itertools-num = "=0.1.3"
#maplit = "=1.0.2"
#either = "=1.5.3"
#im-rc = "=14.3.0"
#fixedbitset = "=0.2.0"
#bitset-fixed = "=0.1.0"
#proconio = { version = "=0.3.6", features = ["derive"] }
#text_io = "=0.1.8"
#whiteread = "=0.5.0"
#rustc-hash = "=1.1.0"
#smallvec = "=1.2.0"

[dev-dependencies]
bitvec = "0.22.3"

[[bench]]
name = "bitarray"
harness = false

